--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,6 @@
     "-p",
     "*test.py"
   ],
-  "python.testing.pytestEnabled": false,
+  "thon.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": true
 }
